=== qitensor-0.10dev (Dan Stahlke, ongoing) ===
	* can run doctests via 'setup.py test'
	* HilbertSpace.fourier()
	* HilbertSpace.hadamard() for any space of dimension a power of 2
	* HilbertSpace.random_density()
	* HilbertSpace.index_iter_dict()
	* HilbertArray.diag()
	* HilbertArray.measure()
	* HilbertArray.logm()
	* circuits.swap()
	* remove deprecated 'q' param for expm

=== qitensor-0.9 (Dan Stahlke, 2011-04-17) ===
	* random_isometry
	* doctest fixes for sage
	* can pass HilbertBaseField for dtype
	* array formatting fixes/improvements
	* API CHANGE: random_array uses normal distribution
	* random_unitary is uniform w.r.t. Haar measure
	* much better HilbertArray.relabel method
	* HilbertArray.trace between arbitrary spaces
	* HilbertArray.sqrt
	* HilbertArray.purity
	* TensorSubspace module
	* direct_sum for HilbertAtom
	* simplified space/atom constructors
	* more consistent use of exceptions
	* use Cython
	* pickle for HilbertArray has changed; reverse compatibility broken

=== qitensor-0.8 (Dan Stahlke, 2011-12-01) ===
	* as_np_matrix take {row,col}_space args
	* array creation takes arg for axes order of input array
	* svd_list method
	* memoization and better pickling for base field, atom, space
	* index_set is a tuple
	* much refactoring of code
	* cleanup for pylint
	* ipython html rendering (experimental)

=== qitensor-0.7 (Dan Stahlke, 2011-08-09) ===
	* added QR and random_unitary methods
	* fixed bug in norm() under sage
	* added Cartan decomposition as experimental module
	* added HilbertSpace methods:
		* dim
		* index_iter
		* is_square
		* assert_square
		* basis
		* hermitian_basis
		* singular_vals
	* fixed Sage doctest

=== qitensor-0.6 (Dan Stahlke, 2011-05-21) ===
	* implement rich comparison rather than cmp (fixes HilbertSpace() == None)
	* check ininstance in HilbertArray.__eq__
	* HilbertArray.O method (density operator)
	* convert symbolic to complex for svd()
	* entropy() method (symbolic for Sage)